[package]
name = "sw"
version = "0.1.0"
description = "A stopwatch program for the terminal."
authors = ["Mohamed Akram <mohd.akram@outlook.com>"]
repository = "https://github.com/mohd-akram/sw"
categories = ["command-line-utilities", "date-and-time"]
keywords = ["cli", "stopwatch"]
license = "MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
appdirs = "0.2"
clap = "2"
time = "0.1"

[build-dependencies]
gcc = "0.3"
